  * Added more SelectAsXXXAsync() methods for IAsyncEnumerable<TType>
  * Changed order of arguments passed to RepeatingTask.Start() so the cancellation token is immediately prior to default args
  * Moved FormatJsonString() to StringFormatExtensions and JsonString.Format()

AllOverIt.Aws.Cdk.AppSync - v0.16.1
  * Updated to Amazon.CDK.AWS.AppSync v1.128.0

AllOverIt.Aws.AppSync.Client - v0.6.0
  * Rebuilt against AllOverIt v1.20.0 due to breaking changes

AllOverIt.Evaluator - v3.1.0
  * Internal improvements to reduce memory allocations
  * Added conditional and comparison methods: IF, EQ, NE, LT, LTE, GT, GTE





19 Oct 2021
======================================================================================================================
AllOverIt - v1.19.1
  * Added SelectAsync() for .NET Standard 2.1 and above



14 Oct 2021
======================================================================================================================
AllOverIt.Aws.Cdk.AppSync - v0.16.0
  * Updated to Amazon.CDK.AWS.AppSync v1.127.0
  * Added CurrentPageCursor to IPageInfo



08 Oct 2021
======================================================================================================================
AllOverIt - v1.19.0
  * BREAKING CHANGE - Renamed ObjectPropertySerializationHelper to ObjectPropertySerializer and refactored it to
    accept an options class. Added the ability to filter properties and values, as well as change the serialized
    property value. The associated extension method ObjectExtensions.ToSerializedDictionary() has been refactored
    accordingly to accept these options. If not provided, a default set of options is used that behaves identically
    to v1.18.0



07 Oct 2021
======================================================================================================================
AllOverIt.Aws.AppSync.Client - v0.5.1
  * Added ErrorInfo to GraphqlErrorDetail

AllOverIt.Aws.AppSync.Client - v0.5.2